# dn42-control-backend

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  PEERING.md  README.md  alembic.ini  pyproject.toml
apps/control-server/: README.md  pyproject.toml
apps/control-server/app/: __init__.py  main.py
apps/control-server/app/api/: __init__.py  deps.py
apps/control-server/app/api/v1/: __init__.py  agent_http.py  agent_ws.py  health.py
apps/control-server/app/api/v1/admin/: __init__.py  _helpers.py  (+13 more)
apps/control-server/app/core/: __init__.py  config.py  errors.py  events.py
apps/control-server/app/db/: __init__.py  base.py  engine.py  provision.py  seed.py
apps/control-server/app/db/models/: __init__.py  audit.py  base.py  dns.py  generation.py  node.py  node_status.py  peering.py  routing.py  traffic.py
apps/control-server/app/schemas/: __init__.py  events.py  health.py  routing.py
apps/control-server/app/services/: __init__.py  audit.py  cache.py  desired_state.py  enrollment.py  generations.py  internal_topology.py  materializer.py  node_status.py  observability.py  peering_backfill.py  pending_registrations.py  routing.py  routing_aggregate.py  tokens.py  traffic.py  wireguard_keys.py
apps/control-server/app/tests/: __init__.py  _seed_helper.py  conftest.py  test_admin_crud.py  test_agent_http_auth.py  test_agent_register.py  test_agent_ws.py  test_cache.py  test_control_plane_security.py  test_db_repositories.py  test_fleet_overview.py  test_generation_history.py  test_health.py  test_internal_topology.py  test_materializer_lla.py  test_node_status_and_tokens.py  test_observability.py  test_provision_base_template.py  test_routing.py  test_token_shape.py  test_traffic.py  test_wireguard_key_escrow.py
apps/node-agent/: README.md  agent.example.toml  pyproject.toml
apps/node-agent/agent/: __init__.py  adapters.py  doctor.py  l3_heal.py  main.py  metrics.py  observability.py  orchestrator.py  reresolve.py  routing.py  session.py  sources.py  traffic.py  watch.py
apps/node-agent/agent/apply/: __init__.py  convergence.py  definition_store.py  docker_api.py  executor.py  writer.py
apps/node-agent/agent/client/: __init__.py  controller.py
apps/node-agent/agent/collectors/: __init__.py  bird_socket.py  docker.py  inventory.py  network.py  routing.py  snapshot.py
apps/node-agent/agent/core/: __init__.py  clock.py  config.py  errors.py  exec.py  identity.py  logging.py  naming.py  paths.py
apps/node-agent/agent/desired_state/: __init__.py  cache.py  loader.py
apps/node-agent/agent/health/: __init__.py  reconcile.py
apps/node-agent/agent/planner/: __init__.py  container_plan.py  convergence_plan.py  definition.py  file_plan.py  reconcile_plan.py
apps/node-agent/agent/render/: __init__.py  pipeline.py
apps/node-agent/agent/secrets/: __init__.py  wireguard.py
apps/node-agent/agent/tests/: test_apply_backends.py  test_bird_socket.py  test_container_definition.py  test_convergence.py  test_core_config.py  test_core_exec.py  test_core_naming.py  test_docker_observer.py  test_doctor.py  test_l3_heal.py  test_main_cli.py  test_metrics.py  test_network_collectors.py  test_observability.py  test_orchestrator.py  test_persistence.py  test_planner_health.py  test_reresolve.py  test_routing_collectors.py  test_routing_socket_path.py  test_secrets_wireguard.py  test_snapshot_self_metrics.py  test_traffic_collector.py  test_underlay_ipv6.py  test_watch.py
(+129 files in other folders)
