[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "dn42-control-backend"
version = "1.0.0"
description = "DN42 control server and stateless node agent"
requires-python = ">=3.11"
dependencies = [
  "aiosqlite>=0.20",
  "alembic>=1.13",
  "fastapi>=0.115",
  "httpx>=0.27",
  "jinja2>=3.1",
  "pydantic>=2.10",
  "sqlalchemy[asyncio]>=2.0",
  "uvicorn[standard]>=0.32",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.23",
  "ruff>=0.8",
]
mysql = [
  "asyncmy>=0.2.9",
]
postgres = [
  "asyncpg>=0.29",
]

# 根项目只聚合依赖与测试/lint 配置,本身不含可安装的包
# (首方包在 packages/，应用在 apps/，各有自己的 pyproject)。
[tool.setuptools]
packages = []

[tool.ruff]
line-length = 100

[tool.ruff.lint]
# 默认规则集（E4/E7/E9 + F）。忽略 E402：本项目多数模块刻意用「from __future__ import
# annotations + 模块文档串 + imports」的写法，使后续 import 全报 module-import-not-at-top；
# 这是既定风格、非缺陷。其余（F 未用 import/变量、E7 语句、E9 语法）仍强制。
ignore = ["E402"]

[tool.pytest.ini_options]
testpaths = ["tests", "apps/node-agent/agent/tests", "apps/control-server/app/tests"]
asyncio_mode = "auto"
pythonpath = [
  "apps/control-server",
  "apps/node-agent",
  "packages/dn42_common",
  "packages/dn42_schemas",
  "packages/dn42_templates",
  "packages/dn42_runtime"
]
