[project]
name = "dn42-control-server"
version = "1.0.0"
description = "DN42 control server"
requires-python = ">=3.11"
dependencies = [
  "dn42-common",
  "dn42-schemas",
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "sqlalchemy[asyncio]>=2.0",
  "aiosqlite>=0.20",
  "asyncpg>=0.30",
  "redis>=5.0",
  "alembic>=1.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
