[project]
name = "dn42-node-agent"
version = "1.0.0"
description = "DN42 node agent"
requires-python = ">=3.11"
dependencies = [
  "dn42-common",
  "dn42-runtime",
  "dn42-schemas",
  "dn42-templates",
  "docker>=7.1",
  "httpx>=0.27",
  "pydantic>=2.10",
  "websockets>=13",
]

[project.scripts]
dn42-node-agent = "agent.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent"]
